# source2-dumper

./: .gitignore  CMakeLists.txt  Dockerfile.test.dockerignore  LICENSE  README.md
.github/workflows/: download-depots.yml  schema-site.yml
headers/linux/: concommands.txt  convars.txt
headers/linux/libanimationsystem.so/: AimCameraOpFixedSettings_t.h  AimMatrixBlendMode.h  AimMatrixOpFixedSettings_t.h  AnimNodeID.h  AnimNodeNetworkMode.h  AnimNodeOutputID.h  AnimParamButton_t.h  AnimParamNetworkSetting.h  AnimParamType_t.h  AnimParamVectorType_t.h  AnimScriptType.h  AnimTagID.h  AnimValueSource.h  AnimVectorSource.h  AnimationDecodeDebugDumpElement_t.h  AnimationDecodeDebugDump_t.h  AnimationProcessingType_t.h  AnimationSnapshotBase_t.h  AnimationSnapshot_t.h  BinaryNodeChildOption.h  BinaryNodeTiming.h  Blend2DMode.h  BlendItem_t.h  BlendKeyType.h  BoneDemoCaptureSettings_t.h  BoneMaskBlendSpace.h  BoneTransformSpace_t.h  CActionComponentUpdater.h  CAddUpdateNode.h  CAimCameraUpdateNode.h  CAimConstraint.h  CAimMatrixUpdateNode.h  CAnimActionUpdater.h  CAnimActivity.h  CAnimBone.h  CAnimBoneDifference.h  CAnimComponentUpdater.h  CAnimCycle.h  CAnimData.h  CAnimDataChannelDesc.h  (+403 more)
headers/linux/libclient.so/: AABBWS_t.h  AABB_t.h  ABILITY_TYPES.h  AI_BaseNPCAnimGraph_DebugSnapshotData_t.h  AI_BaseNPC_DebugSnapshotData_t.h  AI_DefaultNPC_DebugSnapshotData_t.h  AI_DefaultNPC_DebugSnapshotData_t__PathQuery_t.h  AI_FacingServices_DebugSnapshotData_t.h  AI_GroundRootMotionMotor_DebugSnapshotData_t.h  AI_GroundRootMotionMotor_DebugSnapshotData_t__Event_t.h  AI_MotorServices_DebugSnapshotData_t.h  AI_MotorServices_DebugSnapshotData_t__MotorPathWaypoint_t.h  AI_Navigator_DebugSnapshotData_t.h  AI_Navigator_DebugSnapshotData_t__Waypoint_t.h  AbilityBarType_t.h  AbilityContributionType_t.h  AbilityID_t.h  AbilityLearnResult_t.h  ActiveModelConfig_t.h  AmmoFlags_t.h  AmmoIndex_t.h  AmmoPosition_t.h  AmmoTypeInfo_t.h  AmphibianRhapsodySong_t.h  AnimGraph2SerializedPoseRecipeSlot_t.h  AnimGraphDebugDrawType_t.h  AnimLoopMode_t.h  AnimationAlgorithm_t.h  ArtyCannonDef_t.h  ArtyConstants_t.h  ArtyEnemyDef_t.h  ArtyEnemyOrder_t.h  ArtyGameModeInfo_t.h  ArtyGameModeLevelInfo_t.h  ArtyGameObjectDef_t.h  ArtyGameObjectID_t.h  ArtyGameObjectInstance_t.h  ArtyGraphicID_t.h  ArtyGraphicInfo_t.h  ArtyLevelID_t.h  (+8618 more)
headers/linux/libhost.so/: CAnimScriptBase.h  EmptyTestScript.h
headers/linux/libmaterialsystem2.so/: BloomBlendMode_t.h  HorizJustification_e.h  LayoutPositionType_e.h  MaterialParamBuffer_t.h  MaterialParamFloat_t.h  MaterialParamInt_t.h  MaterialParamString_t.h  MaterialParamTexture_t.h  MaterialParamVector_t.h  MaterialParam_t.h  MaterialResourceData_t.h  PostProcessingBloomParameters_t.h  PostProcessingFogScatteringParameters_t.h  PostProcessingLocalContrastParameters_t.h  PostProcessingLocalExposureParameters_t.h  PostProcessingResource_t.h  PostProcessingTonemapParameters_t.h  PostProcessingVignetteParameters_t.h  VertJustification_e.h  ViewFadeMode_t.h
headers/linux/libnetworksystem.so/: ChangeAccessorFieldPathIndex_t.h
headers/linux/libpanorama.so/: ELayoutNodeType.h  EStyleNodeType.h
headers/linux/libparticles.so/: AnimationType_t.h  BBoxVolumeType_t.h  BlurFilterType_t.h  CBaseRendererSource2.h  CBaseTrailRenderer.h  CGeneralRandomRotation.h  CGeneralSpin.h  CNewParticleEffect.h  CPAssignment_t.h  CParticleBindingRealPulse.h  CParticleCollectionBindingInstance.h  CParticleCollectionRendererFloatInput.h  CParticleCollectionVecInput.h  CParticleFunction.h  CParticleFunctionConstraint.h  CParticleFunctionEmitter.h  CParticleFunctionForce.h  CParticleFunctionInitializer.h  CParticleFunctionOperator.h  CParticleFunctionPreEmission.h  CParticleFunctionRenderer.h  CParticleMassCalculationParameters.h  CParticleProperty.h  CParticleRemapFloatInput.h  CParticleSystemDefinition.h  CParticleVisibilityInputs.h  CPathParameters.h  CPerParticleVecInput.h  CRandomNumberGeneratorParameters.h  CReplicationParameters.h  CSpinUpdateBase.h  C_INIT_AddVectorToVector.h  C_INIT_AgeNoise.h  C_INIT_ChaoticAttractor.h  C_INIT_CheckParticleForWater.h  C_INIT_ColorLitPerParticle.h  C_INIT_CreateAlongPath.h  C_INIT_CreateFromCPs.h  C_INIT_CreateFromParentParticles.h  C_INIT_CreateFromPlaneCache.h  (+486 more)
headers/linux/libpulse_system.so/: CPulseCell_ExampleCriteria.h  CPulseCell_ExampleCriteria__Criteria_t.h  CPulseCell_ExampleSelector.h  CPulseCell_Outflow_TestExplicitYesNo.h  CPulseCell_Outflow_TestRandomYesNo.h  CPulseCell_Step_TestDomainCreateFakeEntity.h  CPulseCell_Step_TestDomainDestroyFakeEntity.h  CPulseCell_Step_TestDomainEntFire.h  CPulseCell_Step_TestDomainTracepoint.h  CPulseCell_TestEnums.h  CPulseCell_TestWaitWithAutoTracepoints.h  CPulseCell_TestWaitWithCursorState.h  CPulseCell_TestWaitWithCursorState__CursorState_t.h  CPulseCell_TestWaitWithCursorState__InstanceState_t.h  CPulseCell_TestYieldForever.h  CPulseCell_TestYieldWithObservables.h  CPulseCell_Test_NoInflow.h  (+25 more)
headers/win64/: concommands.txt  convars.txt
scripts/: check-buildid.sh  depots.txt  docker-linux-test.sh  download-depots.ps1  download-depots.sh  game-version.sh  ldd-check.sh  schema-modules-check.sh
src/: appsystem.cpp  appsystem.hpp  header_writer.cpp  header_writer.hpp  html_writer.cpp  html_writer.hpp  json_writer.cpp  json_writer.hpp  main.cpp  network_fields.cpp  network_fields.hpp  schema_dumper.cpp  schema_dumper.hpp  schema_model.hpp  schema_util.cpp  schema_util.hpp
src/core/: game_module.cpp  game_module.hpp
src/gameevents/: event_model.hpp  gameevents.cpp  gameevents.hpp
src/output/: header_writer.cpp  header_writer.hpp  json_writer.cpp  json_writer.hpp
src/runtime/: appsystem.cpp  appsystem.hpp  convar_model.hpp  convars.cpp  convars.hpp  network_fields.cpp  network_fields.hpp
src/schema/: schema_model.hpp  schema_parse.cpp  schema_parse.hpp  schema_util.cpp  schema_util.hpp
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: datamap-arrows.html  datamap-dense.html  datamap-layouts.html  netfield-markers.html
web/src/: App.tsx  index.css  main.tsx  types.ts
(+21680 files in other folders)
